[metadata]
name = twitterpi
version = attr: twitterpi.__version__
author = Michael Simpson
author_email = mikeysimpson4@gmail.com
url = https://github.com/misimpso
platform = any
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent

[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.6.9
package_dir=
    =src
packages = find:
install_requires =
    aiohttp
    toml
test_suite = tests

[options.packages.find]
exclude = tests
where = src


[options.entry_points]
console_scripts =
    twitterpi = twitterpi:main

[options.extras_require]
test =
    coverage
doc =
    docutils <17.1
    sphinx >=2.2.1
    sphinxcontrib-napoleon >=0.7
    sphinx_rtd_theme >=0.4.3

[coverage:run]
branch = True
omit = venv/
source = twitter_pi

[coverage:html]
directory = tests/htmlcov

[coverage:report]
fail_under = 80

[bdist_wheel]
universal = 1

[build_sphinx]
project = twitterpi
release = attr: twitterpi.__version__
source-dir = 'docs'

[flake8]
max-line-length = 100
doctests = True
exclude =
    .git,
    .eggs,
    __pycache__,
    tests/,
    docs/,
    build/,
    dist/,
    setup.py
