[metadata]
name = twitterpi
version = attr: twitterpi.__version__
author = Michael Simpson
author_email = mikeysimpson4@gmail.com
url = https://github.com/misimpso
platform = any
classifiers = 
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir = 
    =src
packages = find:
python_requires = >= 3.9
test_suite = tests
zip_safe = True

[options.packages.find]
exclude = tests
where = src

[options.entry_points]
console_scripts =
    twitterpi = twitterpi.main:main

[coverage:run]
branch = True
omit = venv/
source = twitterpi

[coverage:html]
directory = tests/htmlcov

[coverage:report]
fail_under = 80

[bdist_wheel]
universal = 1

[flake8]
doctests = True
exclude =
    .git,
    .eggs,
    __pycache__,
    tests/,
    docs/,
    build/,
    dist/,
    setup.py,
    venv/
ignore = W605
max-line-length = 120
